[gd_scene load_steps=4 format=3 uid="uid://tb5fhmdc8kjb"]

[ext_resource type="Script" uid="uid://b87g63iprhmu" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="SystemFont" id="SystemFont_l6cm7"]
font_names = PackedStringArray("Comic Sans MS")

[sub_resource type="LabelSettings" id="LabelSettings_ekxnf"]
font = SubResource("SystemFont_l6cm7")
font_size = 80
font_color = Color(0, 0, 1, 1)
outline_size = 10
outline_color = Color(0, 1, 1, 1)

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_l6cm7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hole Eater"
label_settings = SubResource("LabelSettings_ekxnf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_right = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="level_cbd_button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
text = "Level - City"

[node name="level_tbd_button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
text = "Coming Soon!"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="pick_colour_label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Pick Colour"

[node name="pick_colour_button" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8

[node name="exit_game_button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 40)
layout_mode = 2
text = "Exit"
